# ecs

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Engine.sln  README.md  cmake.code-workspace
.github/workflows/: build.yml  cmake.yml  master.yml
cmake/: Common.cmake  Defines.cmake  Emscripten.cmake  FindGLAD.cmake  FindGLFW.cmake  FindGlm.cmake  FindGoogleTest.cmake  FindImGui.cmake  FindImGuizmo.cmake  FindStb.cmake  Macros.cmake
doc/: goal.md  project_shoe.md  tasks.md
docs/: tasks.md
projects/: External.vcxproj  External.vcxproj.filters  Lib.vcxproj  Lib.vcxproj.filters  Main.vcxproj  Main.vcxproj.filters  Tests.vcxproj  Tests.vcxproj.filters
shaders/: fragment.frag  fragment_col.frag  fragment_tex.frag  vertex.vert  vertex_proj.vert
src/: Main.cpp  Precompiled.hpp
src/app/: CMakeLists.txt  Main.cpp
src/cli/: CMakeLists.txt  Client.cpp  Client.hpp  Main.cpp
src/component/: Components.hpp  Database.cpp  Database.hpp  EntityId.hpp  IComponent.hpp  Query.cpp  Query.hpp  SparseSet.hpp  System.cpp  System.hpp  Table.hpp
src/core/: Added.hpp  Core.hpp  Datatypes.hpp  Defines.hpp  Deleted.hpp  Engine.cpp  Engine.hpp  Logger.hpp  Math.hpp  Time.cpp  Time.hpp  Traits.hpp  Updated.hpp
src/core/components/: Deleted.hpp
src/core/ecs/: Database.cpp  Query.cpp  Query.hpp  Scheduler.cpp  Scheduler.hpp  SparseIndex.hpp  SparseSet.hpp  System.cpp  System.hpp
src/core/scheduler/: Job.hpp  Scheduler.cpp
src/editor/: EditorSystem.cpp  EditorSystem.hpp  Hovered.hpp  Selected.hpp  TransformGizmo.hpp
src/graphics/: Components.hpp  Id.hpp  Mesh.hpp  OldRenderer.cpp  OldRenderer.hpp  Raycast.cpp  Raycast.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/graphics/components/: AABB.cpp  AABB.hpp  Mesh.hpp  OBB.cpp
src/lib/: CMakeLists.txt  Engine.cpp  Engine.hpp  Precompiled.cpp
src/lib/component/: Database.hpp  Query.hpp  SparseIndex.cpp  SparseIndex.hpp  SparseSet.hpp  System.cpp  System.hpp  Table.hpp
src/lib/core/: Added.hpp  Components.hpp  Core.hpp  Datatypes.hpp  Defines.hpp  Engine.cpp  Engine.hpp  Logger.hpp  Math.hpp  Time.cpp  Time.hpp  Traits.hpp
src/lib/core/components/: Added.hpp  Deleted.hpp  Updated.hpp
src/lib/core/ecs/: Database.cpp  Database.hpp  EntityId.hpp  IComponent.hpp  Query.cpp  Query.hpp  Scheduler.cpp  Scheduler.hpp  SparseIndex.cpp  SparseIndex.hpp  SparseSet.hpp  System.cpp  System.hpp  Table.hpp
src/lib/core/graph/: FunctionSignature.hpp  Graph.hpp  Scheduler.cpp  Scheduler.hpp  Task.hpp
src/lib/core/scheduler/: Job.hpp  Scheduler.cpp  Scheduler.hpp  Worker.cpp  Worker.hpp
src/lib/editor/: Components.hpp  EditorSystem.cpp  EditorSystem.hpp  Selected.hpp  TransformGizmo.hpp
src/lib/editor/components/: Hovered.hpp  Selected.hpp  TransformGizmo.hpp
src/lib/graphics/: AABB.cpp  BoundingBox.cpp  BoundingBox.hpp  Mesh.hpp  OBB.cpp  OBB.hpp  OldRenderer.cpp  Raycast.cpp  Raycast.hpp  RenderSystem.cpp  RenderSystem.hpp  Texture.cpp  Texture.hpp
src/lib/render/: Id.hpp  OldRenderer.cpp  OldRenderer.hpp  Raycast.cpp  Raycast.hpp  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/lib/render/components/: AABB.cpp  AABB.hpp  Mesh.hpp  OBB.cpp  OBB.hpp
src/lib/render/shaders/: fragment.frag  vertex.vert
src/lib/scene/: Camera.cpp  Camera.hpp  CameraControl.hpp  CameraController.cpp  CameraController.hpp  CameraSystem.cpp  CameraSystem.hpp  EditorSystem.cpp  EditorSystem.hpp  Scene.cpp  Scene.hpp  Selected.hpp  SelectionSystem.cpp  SelectionSystem.hpp  Transform.cpp  Transform.hpp  TransformGizmo.hpp  TransformSystem.cpp  TransformSystem.hpp
src/lib/scene/components/: Camera.cpp  Camera.hpp  CameraControl.hpp  Transform.hpp
src/lib/ui/: FrameInput.cpp  FrameInput.hpp  ImGui.cpp  ImGui.hpp  InputBindings.cpp  InputBindings.hpp  InputListener.hpp  InputSystem.cpp  InputSystem.hpp  SelectionSystem.cpp  SelectionSystem.hpp  TransformGizmoController.cpp  TransformGizmoController.hpp  Window.cpp  Window.hpp
src/main/: Main.cpp
src/scene/: Camera.cpp  Camera.hpp  CameraControl.hpp  CameraControlSystem.cpp  CameraControlSystem.hpp  CameraController.cpp  CameraController.hpp  CameraSystem.cpp  CameraSystem.hpp  Hovered.hpp  Scene.cpp  Scene.hpp  SceneSystem.cpp  SceneSystem.hpp  Transform.cpp  Transform.hpp  TransformGizmo.hpp  TransformGizmoController.cpp  TransformSystem.cpp  TransformSystem.hpp
src/scene/components/: Camera.cpp  CameraControl.hpp  Transform.hpp
src/system/: Database.cpp  Database.hpp  Query.cpp  Query.hpp  SparseIndex.cpp  SparseIndex.hpp  SparseSet.hpp  System.cpp  System.hpp  Table.hpp
src/ui/: CameraController.cpp  CameraController.hpp  FrameInput.hpp  Gizmo.hpp  GizmoSystem.cpp  GizmoSystem.hpp  ImGui.cpp  ImGui.hpp  InputBindings.cpp  InputBindings.hpp  InputListener.hpp  InputSystem.cpp  InputSystem.hpp  TransformGizmoController.cpp  Window.cpp  Window.hpp
src/view/: Window.cpp  Window.hpp  WindowSystem.cpp  WindowSystem.hpp
test/: CMakeLists.txt  Common.hpp  Main.cpp
test/core/ecs/: Components.hpp  Test_Query.cpp  Test_SparseIndex.cpp  Test_Table.cpp
test/core/graph/: Test_Graph.cpp
test/core/scheduler/: Test_Scheduler.cpp
tests/: CMakeLists.txt  Main.cpp  Precompiled.hpp
tests/component/: TestComponents.hpp  Test_Query.cpp  Test_SparseIndex.cpp  Test_Table.cpp
tests/core/ecs/: TestComponents.hpp  Test_Query.cpp  Test_SparseIndex.cpp  Test_Table.cpp
tests/core/scheduler/: Test_Scheduler.cpp
tests/system/: TestComponents.hpp  Test_Query.cpp  Test_SparseIndex.cpp  Test_Table.cpp
